# tars

./: .gitignore  AGENTS.md  Cargo.toml  README.md
src/: agent.rs  ai_sdk.rs  client.rs  main.rs  protocol.rs  server.rs  tools.rs  ui.rs
src/ai_sdk/: anthropic.rs
src/tools/: edit_file.rs  list_files.rs  read_file.rs
