[package]
name = "tars"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.2"
dotenvy = "0.15"
ratatui = "0.30"
crossterm = "0.29"
axum = "0.7"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive", "env"] }
